Update README to use only Groq for AI services

--- a/server/.env.example
+++ b/server/.env.example
@@ -10,9 +10,8 @@ AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_BUCKET_NAME=lexora-assets
 AWS_REGION=us-east-1
 
-# AI Services
+# AI Service
 GROQ_API_KEY=your-groq-api-key
-OPENROUTER_API_KEY=your-openrouter-api-key
 
 # Frontend URL
 CLIENT_URL=http://localhost:5173
