--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "server",
+  "name": "lexora-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.ts",
+    "dev": "nodemon --exec ts-node server.ts",
     "build": "tsc",
-    "start": "node server.js",
+    "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,7 +20,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "express-rate-limit": "^7.1.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "aws-sdk": "^2.1691.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
@@ -28,6 +32,8 @@
     "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
     "typescript": "^5.3.3",
     "nodemon": "^3.0.2",
     "ts-node": "^10.9.1"
