--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^8.0.3",
     "express-rate-limit": "^7.1.5",
     "dotenv": "^16.3.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "aws-sdk": "^2.1691.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
@@ -32,6 +34,8 @@
     "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.3",
     "typescript": "^5.3.3",
