--- a/server/.env.example
+++ b/server/.env.example
@@ -13,5 +13,10 @@ AWS_REGION=us-east-1
 # AI Service
 GROQ_API_KEY=your-groq-api-key
 
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your-google-client-id
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:5000/auth/google/callback
+
 # Frontend URL
 CLIENT_URL=http://localhost:5173
