--- a/server/package.json
+++ b/server/package.json
@@ -13,33 +13,34 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "@aws-sdk/client-s3": "^3.842.0",
+    "@aws-sdk/s3-request-presigner": "^3.842.0",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "express-rate-limit": "^7.1.5",
-    "dotenv": "^16.3.1",
-    "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0",
-    "aws-sdk": "^2.1691.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "axios": "^1.6.2"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/passport": "^1.0.16",
-    "@types/passport-google-oauth20": "^2.0.14",
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.3",
-    "typescript": "^5.3.3",
+    "@types/node": "^20.10.4",
+    "@types/passport": "^1.0.16",
+    "@types/passport-google-oauth20": "^2.0.14",
     "nodemon": "^3.0.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.3"
   }
 }
