--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
     "dev": "npx nodemon --exec ts-node server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
+    "seed": "ts-node seed.ts",
+    "seed:clear": "ts-node -e \"import('./seed').then(m => m.default())\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
