--- a/server/package.json
+++ b/server/package.json
@@ -28,8 +28,10 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "node-gtts": "^2.0.2",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "sharp": "^0.33.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
