--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
-    "node-gtts": "^2.0.2",
+    "gtts": "^0.2.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "sharp": "^0.33.0"
