--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "wav2lip:clean": "cd Wav2Lip && ./run.sh clean",
     "seed": "ts-node seed.ts",
     "seed:clear": "ts-node -e \"import('./seed').then(m => m.default())\"",
+    "clean-db": "node scripts/clean-database.js",
+    "clean-db:ts": "ts-node scripts/clean-database.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
