--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,26 @@ dist/
 
 # Wav2Lip models
 server/Wav2Lip/models/
+
+# Python cache files
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+PYTHONPATH
