--- a/server/Wav2Lip/requirements.txt
+++ b/server/Wav2Lip/requirements.txt
@@ -10,7 +10,7 @@ opencv-python==4.8.1.78
 Pillow==10.0.1
 
 # Scientific computing
-numpy==1.24.3
+numpy>=2.0.0
 scipy==1.11.4
 
 # Machine learning (choose based on your Wav2Lip model)
