--- a/server/Wav2Lip/requirements.txt
+++ b/server/Wav2Lip/requirements.txt
@@ -1,49 +1,5 @@
-# Core web framework
 Flask==2.3.3
-Werkzeug==2.3.7
-
-# HTTP requests
 requests==2.31.0
-
-# Computer vision and image processing
-opencv-python==4.8.1.78
-Pillow==10.0.1
-
-# Scientific computing
-numpy>=2.0.0
-scipy==1.11.4
-
-# Machine learning (choose based on your Wav2Lip model)
-torch==2.0.1
-torchvision==0.15.2
-torchaudio==2.0.2
-
-# Audio processing
-librosa==0.10.1
-soundfile==0.12.1
-pydub==0.25.1
-
-# Text-to-speech
-gTTS==2.4.0
-
-# Video processing
-ffmpeg-python==0.2.0
-
-# Utilities
 python-dotenv==1.0.0
-uuid==1.30
-
-# AWS SDK (for S3 integration)
-boto3==1.29.7
-botocore==1.32.7
-
-# Face detection and processing (for Wav2Lip)
-dlib==19.24.2
-face-recognition==1.3.0
-
-# Additional dependencies for Wav2Lip
-mediapipe==0.10.7
-resampy==0.4.2
-
-# Development and debugging
-python-json-logger==2.0.7
+uuid
+# Add SadTalker dependencies separately per their repo
