Integrate ElevenLabs and D-ID APIs

--- a/server/.env.example
+++ b/server/.env.example
@@ -25,11 +25,12 @@ AWS_REGION=us-east-1
 # AI Service Configuration
 GROQ_API_KEY=your-groq-api-key
 
-# Wav2Lip Service Configuration
-WAV2LIP_SERVICE_URL=http://localhost:5001
+# ElevenLabs API Configuration
+ELEVENLABS_API_KEY=your-elevenlabs-api-key-here
 
-# Google Cloud TTS (Optional - for better TTS quality)
-GOOGLE_CLOUD_TTS_API_KEY=your-google-cloud-tts-api-key
+# D-ID API Configuration
+D_ID_API_KEY=your-d-id-api-key-here
+D_ID_BASE_URL=https://api.d-id.com
 
 # Frontend URL
 CLIENT_URL=http://localhost:5173
