--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.842.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
+    "@types/form-data": "^2.2.1",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "form-data": "^4.0.3",
     "gtts": "^0.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
